# rust-linter

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  entrypoint.sh  thailint.yaml
.github/: dependabot.yml
.github/workflows/: build_and_push_docker_image.yml  validate_new_changes.yml  validate_pr_name.yml
tests/correct_rust/: Cargo.toml  README.md
tests/correct_rust/src/: lib.rs
tests/incorrect_rust/: Cargo.toml
tests/incorrect_rust/src/: main.rs
tests/incorrect_thailint/: Cargo.toml  README.md
tests/incorrect_thailint/src/: lib.rs
