[package]
name = "correct_rust"
version = "0.1.0"
edition = "2021"
description = "Test fixture that passes strict clippy lints."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Articola-Tools/rust-linter"
readme = "README.md"
keywords = ["test", "clippy", "linter"]
categories = ["development-tools"]
